--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Deploy
+name: CI
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - test/cicd-pipeline
 
 jobs:
-  deploy:
+  test:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
