--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,16 +12,13 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        go-version: [1.21, 1.22, 1.23]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: '1.23'
       - name: Install dependencies
         run: go get .
       - name: Build
@@ -31,7 +28,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{github.run_id}}-${{github.sha}}-go-${{ matrix.go-version }}
+          name: ${{github.run_id}}-${{github.sha}}
           path: ${{github.run_id}}.zip
 
   deploy:
@@ -41,7 +38,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
-          name: ${{github.run_id}}-${{github.sha}}-go-${{ matrix.go-version }}
+          name: ${{github.run_id}}-${{github.sha}}
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
