--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,16 +8,13 @@ on:
 jobs:
   test:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        go-version: [1.21, 1.22, 1.23]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: '1.23'
       - name: Install dependencies
         run: go get .
       - name: Build
