--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -45,10 +45,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ AWS_REGION }}
+          aws-region: ${{ env.AWS_REGION }}
       - name: Deploy to Elastic Beanstalk
         run: |
-          aws s3 cp ${{github.run_id}}.zip s3://elasticbeanstalk-${{ AWS_REGION }}-${{ secrets.AWS_ACCOUNT_ID }}/moviez/
-          aws elasticbeanstalk create-application-version --application-name $ELASTIC_BEANSTALK_NAME --version-label ${{ github.run_id }} --source-bundle S3Bucket="elasticbeanstalk-${{ AWS_REGION }}-${{ secrets.AWS_ACCOUNT_ID }}",S3Key="moviez/${{github.run_id}}.zip"
+          aws s3 cp ${{github.run_id}}.zip s3://elasticbeanstalk-${{ env.AWS_REGION }}-${{ secrets.AWS_ACCOUNT_ID }}/moviez/
+          aws elasticbeanstalk create-application-version --application-name $ELASTIC_BEANSTALK_NAME --version-label ${{ github.run_id }} --source-bundle S3Bucket="elasticbeanstalk-${{ env.AWS_REGION }}-${{ secrets.AWS_ACCOUNT_ID }}",S3Key="moviez/${{github.run_id}}.zip"
           aws elasticbeanstalk update-environment --application-name $ELASTIC_BEANSTALK_NAME --environment-name $ELASTIC_BEANSTALK_ENVIRONMENT --version-label ${{ github.run_id }}
           aws elasticbeanstalk wait environment-updated --application-name $ELASTIC_BEANSTALK_NAME --environment-name $ELASTIC_BEANSTALK_ENVIRONMENT
