--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -8,7 +8,6 @@ on:
 env:
   ELASTIC_BEANSTALK_ENVIRONMENT: moviez-env
   ELASTIC_BEANSTALK_NAME: moviez
-  AWS_REGION: us-east-1
 
 jobs:
   build:
@@ -45,10 +44,14 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ vars.AWS_REGION }}
       - name: Deploy to Elastic Beanstalk
         run: |
-          aws s3 cp ${{github.run_id}}.zip s3://elasticbeanstalk-${{ env.AWS_REGION }}-${{ secrets.AWS_ACCOUNT_ID }}/moviez/
-          aws elasticbeanstalk create-application-version --application-name $ELASTIC_BEANSTALK_NAME --version-label ${{ github.run_id }} --source-bundle S3Bucket="elasticbeanstalk-${{ env.AWS_REGION }}-${{ secrets.AWS_ACCOUNT_ID }}",S3Key="moviez/${{github.run_id}}.zip"
+         # Create S3 bucket if it doesn't exist
+          aws s3api head-bucket --bucket elasticbeanstalk-${{ vars.AWS_REGION }}-${{ vars.AWS_ACCOUNT_ID }} || aws s3 mb s3://elasticbeanstalk-${{ vars.AWS_REGION }}-${{ vars.AWS_ACCOUNT_ID }}
+          
+          # Continue with the existing commands
+          aws s3 cp ${{github.run_id}}.zip s3://elasticbeanstalk-${{ vars.AWS_REGION }}-${{ vars.AWS_ACCOUNT_ID }}/moviez/
+          aws elasticbeanstalk create-application-version --application-name $ELASTIC_BEANSTALK_NAME --version-label ${{ github.run_id }} --source-bundle S3Bucket="elasticbeanstalk-${{ vars.AWS_REGION }}-${{ vars.AWS_ACCOUNT_ID }}",S3Key="moviez/${{github.run_id}}.zip"
           aws elasticbeanstalk update-environment --application-name $ELASTIC_BEANSTALK_NAME --environment-name $ELASTIC_BEANSTALK_ENVIRONMENT --version-label ${{ github.run_id }}
           aws elasticbeanstalk wait environment-updated --application-name $ELASTIC_BEANSTALK_NAME --environment-name $ELASTIC_BEANSTALK_ENVIRONMENT
