--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,32 +1,25 @@
-# name: Deploy
+name: CI
 
-# on:
-#   push:
-#     branches:
-#       - main
-#   pull_request:
-#     branches:
-#       - main
-#   workflow_dispatch:
+on:
+  push:
+    branches:
+      - '**'
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-22.04
-#     strategy:
-#       matrix:
-#         go-version: [1.18, 1.19, 1.20, 1.21, 1.22, 1.23]
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
-#       - name: Set up Go
-#         uses: actions/setup-go@v5
-#         with:
-#           go-version: ${{ matrix.go-version }}
-#       - name: Install dependencies
-#         run: go get .
-#       - name: Build
-#         run: go build -v ./...
-#       - name: Test
-#         run: go test -v ./...
+jobs:
+  test:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+      - name: Install dependencies
+        run: go get .
+      - name: Build
+        run: go build -v ./...
+      - name: Test
+        run: go test -v ./...
         
       
