--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -8,7 +8,7 @@ on:
       - dev
 
 env:
-  ELASTIC_BEANSTALK_ENVIRONMENT: ${{ github.event_name == 'pull_request' && 'moviez-dev' || 'moviez-prod' }}
+  ELASTIC_BEANSTALK_ENVIRONMENT: ${{ github.event_name == 'push' && github.ref == 'refs/heads/dev' && 'moviez-dev' || github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && 'moviez-prod' || 'moviez-prod' }}
   ELASTIC_BEANSTALK_NAME: moviez
 
 jobs:
