--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,7 @@
       "mode": "auto",
       "program": "${workspaceFolder}",
       "args": [
-        "http",
-        "--config",
-        "./config.yaml"
+        "http"
       ]
     }
   ]
